# TrentonBot

./: .bazelrc  .flake8  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE.bzlmod  requirements.in  requirements_lock.txt  requirements_windows.txt
.github/workflows/: README.md  ci.yaml
config/: BUILD.bazel
src/api/: BUILD.bazel  README.md  api.py  main.py  requirements.txt  robot.py
src/api/assets/: BUILD.bazel
src/api/v1/: BUILD.bazel  README.md  api.py  main.py  requirements.txt  robot.py
src/api/v2/: BUILD.bazel  README.md  api.py
src/drivers/dynamixel/: BUILD.bazel  README.md  dynamixel_sdk.h  group_bulk_read.cpp  group_bulk_read.h  group_bulk_write.cpp  group_bulk_write.h  group_fast_bulk_read.cpp  group_fast_bulk_read.h  group_fast_sync_read.cpp  group_fast_sync_read.h  group_handler.cpp  group_handler.h  group_sync_read.cpp  group_sync_read.h  group_sync_write.cpp  group_sync_write.h  packet_handler.cpp  packet_handler.h  port_handler.cpp  port_handler.h  port_handler_arduino.cpp  port_handler_arduino.h  port_handler_linux.cpp  port_handler_linux.h  port_handler_mac.cpp  port_handler_mac.h  port_handler_windows.cpp  port_handler_windows.h  protocol1_packet_handler.cpp  protocol1_packet_handler.h  protocol2_packet_handler.cpp  protocol2_packet_handler.h
src/kinematics/: BUILD.bazel
src/kinematics/drivetrain/: BUILD.bazel  generic_kinematics.cpp  generic_kinematics.h  ikinematics.h  x_drive_kinematics.cpp  x_drive_kinematics.h
src/math/: BUILD.bazel  pid.h  vector_math.h
src/odometry/: BUILD.bazel  iodometry.h
src/robot/: BUILD.bazel  README.md  config.py  dynamixel_motor.cpp  dynamixel_motor.h  main.cpp  motor.h  pid.h  robot.cpp  robot.h  robot.py  structs.py
src/robot/actuator/: BUILD.bazel  dynamixel_motor.cpp  dynamixel_motor.h  dynamixel_motor_test.cpp  imotor.h  mock_motor.cpp  mock_motor.h  mock_motor_test.cpp  motor.h
src/robot/v1/: BUILD.bazel  robot.py
src/robot/v2/: README.md  robot_control.py  subscriber.py
src/ui/: next.config.mjs  package-lock.json
src/ui/src/app/: globals.css  page.tsx
src/ui/v1/: nodelete  package-lock.json  package.json  tailwind.config.ts
src/ui/v1/src/app/: layout.tsx  page.tsx
src/util/: BUILD.bazel  linalg.py  linalg_test.py
tools/containerization/: py_layer.bzl
tools/format/: BUILD.bazel
tools/lint/: BUILD.bazel  linters.bzl
