load("@rules_multirun//:defs.bzl", "command", "multirun")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

# This rule adds a convenient way to update the requirements file.
compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
    requirements_windows = "requirements_windows.txt",
)

# Set up commands to build all images in the project
command(
    name = "api_v2_img",
    command = "//src/api/v2:tarball",
    visibility = ["//visibility:public"],
)

multirun(
    name = "build_all_imgs",
    commands = [
        ":api_v2_img",
    ],
    jobs = 0,
)

alias(
    name = "format",
    actual = "//tools/format",
)
