load("@rules_python//python:defs.bzl", "py_library")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# Put all robot files in this library
py_library(
    name = "robot_src",
    srcs = [
        "config.py",
        "robot.py",
        "structs.py",
    ],
    deps = [
        "@pypi//fastapi:pkg",
        "@pypi//jinja2:pkg",
        "@pypi//numpy:pkg",
        "@pypi//opencv_python:pkg",
        "@pypi//websockets:pkg",
    ],
)

cc_library(
    name = "robot_lib",
    srcs = [
        "robot.cpp",
    ],
    hdrs = [
        "imotor.h",
        "robot.h",
    ],
    deps = ["@eigen"],
)

cc_binary(
    name = "robot",
    srcs = [
        "robot.cpp",
    ],
    deps = [
        "robot_lib",
        "@eigen",
    ],
)

cc_binary(
    name = "main",
    srcs = [
        "main.cpp",
    ],
    deps = [
        "robot_lib",
        "@eigen",
    ],
)

pkg_tar(
    name = "tar",
    srcs = [":main"],
)

oci_image(
    name = "image",
    base = "@docker_lib_ubuntu",
    entrypoint = ["/example_binary"],
    tars = [":tar"],
)

oci_tarball(
    name = "image_tarball",
    image = ":image",
    repo_tags = ["example:latest"],
)
