load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_python//python:defs.bzl", "py_library")

# Put all robot files in this library
py_library(
    name = "robot_src",
    srcs = [
        "config.py",
        "robot.py",
        "structs.py",
    ],
    deps = [
        "@pypi//fastapi:pkg",
        "@pypi//jinja2:pkg",
        "@pypi//numpy:pkg",
        "@pypi//opencv_python:pkg",
        "@pypi//websockets:pkg",
    ],
)

cc_library(
    name = "robot_lib",
    srcs = [
        "robot.cpp",
    ],
    hdrs = [
        "robot.h",
    ],
    deps = [
        "//src/kinematics/drivetrain:kinematics_interface_lib",
        "//src/robot/actuator:dynamixel_motor_lib",
        "@eigen",
    ],
)

# cc_binary(
#     name = "robot",
#     srcs = [
#         "robot.cpp",
#     ],
#     deps = [
#         "robot_lib",
#         "@eigen",
#     ],
# )

cc_binary(
    name = "main",
    srcs = [
        "main.cpp",
    ],
    deps = [
        "robot_lib",
        "@eigen",
    ],
)

pkg_tar(
    name = "tar",
    srcs = [":main"],
)

oci_image(
    name = "image",
    base = "@gcc",
    entrypoint = ["src/robot/main"],
    tars = [":tar"],
)

oci_tarball(
    name = "image_tarball",
    image = ":image",
    repo_tags = ["trentonbot_robot:latest"],
)
