cc_library(
    name = "kinematics_interface_lib",
    hdrs = [
        "ikinematics.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/math:vector_lib",
        "//src/robot/actuator:generic_motor_lib",
        "@eigen",
    ],
)

cc_library(
    name = "generic_kinematics_lib",
    srcs = [
        "generic_kinematics.cpp",
    ],
    hdrs = [
        "generic_kinematics.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":kinematics_interface_lib",
        "//src/math:vector_lib",
        "//src/robot/actuator:generic_motor_lib",
        "@eigen",
    ],
)

cc_library(
    name = "tank_drive_kinematics_lib",
    srcs = [
        "tank_drive_kinematics.cpp",
    ],
    hdrs = [
        "tank_drive_kinematics.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":kinematics_interface_lib",
        "//src/math:vector_lib",
        "//src/robot/actuator:generic_motor_lib",
        "@eigen",
    ],
)

cc_library(
    name = "x_drive_kinematics_lib",
    srcs = [
        "x_drive_kinematics.cpp",
    ],
    hdrs = [
        "x_drive_kinematics.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":kinematics_interface_lib",
        "//src/math:vector_lib",
        "//src/robot/actuator:generic_motor_lib",
        "@eigen",
    ],
)
